# uncertainty-action-budget-stress-test

./: PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: assertion_results.json  formula_sensitivity_table.md  incident_summary.json  top_mean_policy.md  uncertainty_action_budget_diff.md  uncertainty_robust_policy.md
configs/: robust_action_policy.yaml
data/synthetic/: clean_uncertainty_cases.csv  messier_uncertainty_cases.csv  zero_uncertainty_control.csv
docs/: career_blurbs.md  case_study.md  evaluation_plan.md  failure_mode_register.md  formula_contract.md  portfolio_positioning.md  portfolio_readiness_review.md  reviewer_walkthrough.md  scope_reassessment.md
scripts/: demo.sh
src/uncertainty_action/: __init__.py  __main__.py  action_set_diff.py  artifact_writer.py  assertions.py  cli.py  fixture_loader.py  formula_contract.py  policy_runner.py  sensitivity_report.py
tests/: test_action_set_diff.py  test_assertion_integrity.py  test_formula_sensitivity.py  test_robust_policy.py  test_top_mean_policy.py
